# yms-dashboard

./: .gitignore  .hermes_bridge.md  PROJECT_INDEX.md  PYCHARM_SETUP.md  README.md  pyproject.toml  requirements.txt  setup.py  start_api.sh
app/: api.py  cache_utils.py  data_generator.py  database.py  main.py  yms_correlation.py  yms_doe.py  yms_doe_enhanced.py  yms_lot_gantt.py  yms_msa.py  yms_process_flow.py  yms_trend.py  yms_yield.py
app/modules/: __init__.py  dashboard.py  data_query.py  data_upload.py  lot_gantt.py  spc_analysis.py  wafer_map.py
config/: config.yaml
data/: B3RxRuncard.xlsx
docs/cases/: rca-case-010.md
docs/learning/: YMS-learning-plan.md  YMS-phase1-plan.md  YMS-resources-direct-links.md  YMS-resources.md  YMS-study-notes-existing.md
docs/notes/: CMOS-process-map.md  CMOS-process-notes.md  Handbook-Ch1-notes.md  Handbook-notes.md  metallization-notes.md
docs/plans/: YMS-linux-migration-plan.md
docs/skills/: semiconductor-yms.skill
knowledge/: terminology.md
schema/: defect_module.sql
scripts/: README.md  generate_mock_data.py  legacy_correlation_analysis.py  regenerate_mock_data.py  test_grr.py
src/yms/: __init__.py
src/yms/analysis/: __init__.py  correlation_analysis.py  correlation_engine.py  msa_gauge_rr.py  spc_control_charts.py  yield_analysis.py
src/yms/visualization/: __init__.py  wafer_map_viz.py
templates/: runcard_template.xlsx
